# ExpertAssist

./: .editorconfig  .env.example  .gitignore  .~lock.Cases_Defauts_10032026.odt#  .~lock.Cases_Defauts_28082024.odt#  .~lock.Config_study_cases.odt#  .~lock.Difference_Fast_Slow_modes.odt#  AUTHORS.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cases_Defauts_10032026.odt  Cases_Defauts_28082024_new.odt  Config_study_cases (copie).odt  Developpement Pypowsybl Backend.odt  Difference_Fast_Slow_modes (copie).odt  README.md  baseline_metrics.txt  config.default.json  dir_output.txt  fix_zoom.py  inspect_metadata.py  optimized_metrics.txt  overrides.txt  profiling.prof  profiling_results.json  pyproject.toml  pytest.ini  repro_stuck.py  reproduce_error.py  requirements_py310.txt  standalone_interface.html  standalone_interface_legacy.html  test_api_stream.py  test_crash.py  test_n1_api.py  test_voltage_api.py  verify_delta_v2.py  verify_n1.py  verify_n1_simulation.py  (+1 more)
.circleci/: config.yml
.claude/: plan.md
.github/workflows/: code-quality.yml  parity.yml  test.yml
benchmarks/: README.md  _bench_common.py  bench_load_study.py  bench_n1_diagram.py  bench_nad_n_state.py  bench_nad_toggles.py  bench_topology_cache.py  bench_voltage_level_queries.py  run_all.py
data/pypsa_eur_fr225_400/: actions.json  bus_id_mapping.json  grid_layout.json  line_id_names.json  n1_overload_contingencies.json  osm_names.json  vl_next_node.json
data/pypsa_eur_fr400/: actions.json  bus_id_mapping.json  grid_layout.json  n1_overload_contingencies.json  network.m  network.xiidm  network_stats.txt  vl_next_node.json
docs/: PR_PERF_OPTIMIZATION.md  action-overview-diagram.md  app-refactoring-plan.md  code-quality-analysis.md  combined-actions.md  curtailment-actions.md  curtailment-loadshedding-pst-actions.md  description_actions_topology.md  detachable-viz-tabs.md  frontend-ui-improvements.md  interaction-logging.md  nad_optimization.md  network_rendering_profiling_recommendations.md  perf-combined-action-endpoint.md  perf-deferred-non-reconnectable-detection.md  perf-detect-non-reconnectable-fast-path.md  perf-grid2op-shared-network.md  perf-isolated-nad-worker-rejected.md  perf-loading-parallel.md  perf-nad-profile-bare-env.md  perf-narrow-voltage-level-queries.md  perf-per-endpoint-gzip.md  perf-shared-network.md  perf-skip-initial-obs.md  perf-svg-slimming.md  performance_profiling.md  phase2-state-management-optimization.md  rendering-optimization-plan.md  save-results.md  spatial_lod_architecture_proposal.md  state-reset-and-confirmation-dialogs.md  walkthrough_network_rendering_profiling.md
docs/architecture/: code-quality-analysis.md
docs/data/: pypsa-eur-osm-to-xiidm.md
docs/features/: action-overview-diagram.md  save-results.md  state-reset-and-confirmation-dialogs.md
expert_backend/: CLAUDE.md  __init__.py  main.py  requirements.txt  test_backend.py
expert_backend/services/: analysis_mixin.py  diagram_mixin.py  network_service.py  recommender_service.py  sanitize.py  simulation_helpers.py  simulation_mixin.py  svg_slim.py
expert_backend/tests/: CLAUDE.md  baseline_scenario.json  conftest.py  test_analysis_helpers.py  test_api_endpoints.py  test_apply_contingency.py  test_cache_synchronization.py  test_combined_actions_integration.py  test_combined_actions_scenario.py  test_compute_deltas.py  test_config_persistence.py  test_configurable_mw.py  test_diagram_helpers.py  test_diagram_mixin.py  test_direct_file_loading.py  test_dynamic_actions.py  test_early_pdf_reporting.py  test_environment_detection.py  test_get_n1_variant_clones_from_n_state.py  test_islanding_mw_recommender.py  test_manual_action_enrichment.py  test_monitoring_consistency.py  test_mw_start.py  test_network_service.py  test_overflow_geo_transform.py  test_overload_filtering.py  test_performance_budgets.py  test_power_reduction_format.py  test_pst_combined_actions.py  test_pst_integration.py  test_recommender_filtering.py  test_recommender_non_convergence.py  test_recommender_regressions.py  test_recommender_service.py  test_recommender_simulation.py  test_renewable_curtailment.py  test_resimulate_regression.py  test_sanitize.py  test_simulation_helpers.py  test_sld_highlight.py  (+10 more)
frontend/: CLAUDE.md  PARITY_AUDIT.md  eslint.config.js  index.html  lint_output.txt  package-lock.json  package.json  test_output.txt  vite.config.standalone.ts  vite.config.ts
scripts/: PARITY_README.md  add_detailed_topology.py  analyze_svg_structure.py  build_pypsa_eur_network.py  check_code_quality.py  check_gesture_sequence.py  check_invariants.py  check_session_fidelity.py  check_standalone_parity.py  code_quality_report.py  convert_pypsa_to_xiidm.py  generate_baseline.py  profile_diagram_perf.py  test_code_quality_report.py  test_estimation_vs_simulation_small_grid.py  test_grid_layout.py  test_n1_calibration.py
tests/: baseline_scenario.json  test_combined_actions_scenario.py
(+171 files in other folders)
