[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co_study4grid"
version = "0.6.0"
authors = [
    { name="RTE", email="rte@rte-france.com" },
]
description = "Co-Study4Grid — power grid contingency analysis interface"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "ExpertOp4Grid>=0.2.8",
    # Pinned below 1.15 until the test baseline
    # (`expert_backend/tests/baseline_scenario.json`) is regenerated with
    # the newer solver. pypowsybl 1.15.0 shifts both P (~±2.6 MW) and Q
    # (sign-flipping +1.8 → −10.2 Mvar on COUCHY632) on double-busbar
    # node_merging actions, breaking the ±1 MW tolerance of
    # `test_independent_actions_simulation`. See PR #99 discussion.
    "pypowsybl>=1.13.0,<1.15",
    "pypowsybl_jupyter",
    "pydantic-settings",
    "uv",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["expert_backend*"]
exclude = ["frontend*", "tests*", "venv*"]
